# vulkan-renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/shaders/: main.frag  main.vert
src/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Common.h  Drawable.cpp  Drawable.hpp  DrawableManager.hpp  Frame.hpp  Instance.cpp  Instance.hpp  Primitive.hpp  PrimitiveManager.cpp  PrimitiveManager.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Swapchain.cpp  Swapchain.hpp  main.cpp
src/material/: Material.hpp  MaterialManager.cpp  MaterialManager.hpp  Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp
src/memory/: Allocation.cpp  Allocation.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp
src/rendergraph/: RenderGraph.cpp  RenderGraph.hpp  RenderGraphBuilder.cpp  RenderGraphBuilder.hpp  RenderGraphResourceSolver.hpp
src/rendergraph/tasks/: BufferCopy.cpp  BufferCopy.hpp  ImageCopy.cpp  ImageCopy.hpp  OpaquePass.cpp  OpaquePass.hpp  RenderPass.cpp  RenderPass.hpp  Task.hpp
src/resources/: Buffer.cpp  Buffer.hpp  Image.cpp  Image.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  ResourceManager.cpp  ResourceManager.hpp
src/scene/: PrimitiveManager.cpp  PrimitiveManager.hpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp
